--- a/impulso-javascript/Introducao_ao_JavaScript/contador/css/style.css
+++ b/impulso-javascript/Introducao_ao_JavaScript/contador/css/style.css
@@ -21,11 +21,16 @@ h1 {
     margin-bottom: 10px;
 }
 
+body {
+    background-color: rgb(141, 92, 255)
+}
+
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: white;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     width: 500px;
     margin:  100px auto;
